force-app/main/default/objects/BigMachines__Oracle_User__c/BigMachines__Oracle_User__c.object-meta.xml
<CustomObject>
    <label>Oracle User</label>
    <nameField>
        <label>Oracle User Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Oracle Users</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>