force-app/main/default/objects/BigMachines__Oracle_User__c/fields/BigMachines__Access_Type__c.field-meta.xml
<CustomField>
    <fullName>BigMachines__Access_Type__c</fullName>
    <description>This picklist contains the possible access types that are available to Oracle CPQ Cloud users. If you wish to restrict the values that users may select from this list, it is recommended that you create a validation rule. Modifying this list may break the user integration to Oracle CPQ Cloud.</description>
    <label>Access Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>BigMachines__Association_to_Organization__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>FullAccess</fullName>
            </value>
            <value>
                <fullName>SalesAgent</fullName>
                <default>true</default>
                <label>SalesAgent</label>
            </value>
            <value>
                <fullName>ChannelAgent</fullName>
            </value>
            <value>
                <fullName>BuyAccess</fullName>
            </value>
            <value>
                <fullName>RestrictedAccess</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>