force-app/main/default/objects/BigMachines__Oracle_User__c/fields/BigMachines__Number_Format__c.field-meta.xml
<CustomField>
    <fullName>BigMachines__Number_Format__c</fullName>
    <description>This picklist contains the possible number formats that are available to Oracle CPQ Cloud users. Do not modify this list.</description>
    <label>Number Format</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>####.##</fullName>
                <default>true</default>
                <label>####.##</label>
            </value>
            <value>
                <fullName>####,##</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>