force-app/main/default/objects/BigMachines__Oracle_User__c/fields/BigMachines__Oracle_CPQ_Cloud_Site__c.field-meta.xml
<CustomField>
    <fullName>BigMachines__Oracle_CPQ_Cloud_Site__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Oracle CPQ Cloud Site</label>
    <referenceTo>BigMachines__Configuration_Record__c</referenceTo>
    <relationshipLabel>Oracle Users</relationshipLabel>
    <relationshipName>Oracle_Users</relationshipName>
    <type>Lookup</type>
</CustomField>