force-app/main/default/objects/BigMachines__Oracle_User__c/fields/BigMachines__Provisioned__c.field-meta.xml
<CustomField>
    <fullName>BigMachines__Provisioned__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field indicates that there is a Oracle CPQ Cloud user that has been linked to this Salesforce user.</description>
    <inlineHelpText>Check this box to establish a link between this Salesforce user and Oracle CPQ Cloud. Linked users will not be prompted to enter login credentials when accessing Oracle CPQ Cloud to create and edit quotes.</inlineHelpText>
    <label>Synchronize with Oracle CPQ Cloud</label>
    <type>Checkbox</type>
</CustomField>