force-app/main/default/objects/BigMachines__Oracle_User__c/fields/BigMachines__Salesforce_User__c.field-meta.xml
<CustomField>
    <fullName>BigMachines__Salesforce_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Salesforce User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Oracle_Users</relationshipName>
    <type>Lookup</type>
</CustomField>