force-app/main/default/objects/BigMachines__Oracle_User__c/fields/BigMachines__Unit_System__c.field-meta.xml
<CustomField>
    <fullName>BigMachines__Unit_System__c</fullName>
    <description>This picklist contains the possible currency preferences that are available to Oracle CPQ Cloud users. Do not modify this list.</description>
    <label>Unit System</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>System Default</fullName>
                <default>true</default>
                <label>System Default</label>
            </value>
            <value>
                <fullName>English</fullName>
            </value>
            <value>
                <fullName>Metric</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>